# COS3711-exam-prep-2023

./: README.md
2023-assignments/ass2/cos3711-ass2-q1/: CMakeLists.txt  testFile.txt
2023-assignments/ass2/cos3711-ass2-q2q3/: Confectionary.cpp  MyMainWindow.cpp  ReadingMaterial.cpp  Stock.h  XMLViewerDialog.cpp  XMLViewerDialog.h  main.cpp
2023-assignments/ass3/ass3_gui_application/: AddMyItemDialog.cpp  CMakeLists.txt  MyItem.cpp  MyItem.h  MyItemListDialog.cpp  MyItems.xml  MyStoreApp.cpp  MyTransactionFormDialog.cpp  MyTransactionLineItem.cpp  MyTransactionLineItem.h  MyTransactionTreeViewWidget.cpp  MyTransactionTreeViewWidget.h  README.md  main.cpp
2023-assignments/ass3/ass3_udp_receiver_application/: CMakeLists.txt  README.md  main.cpp
2023-assignments/asss1/q1/: .gitignore  MyMainWin.h  MyStaffMember.h  MyStaffMemberModel.cpp  MyStaffMemberModel.h  README.md  main.cpp
2023-assignments/asss1/q2/: MyMainWin.cpp  MyStaffMember.h  MyStaffMemberModel.cpp
2023-assignments/asss1/q3/: MyAlbum.h  MyAlbumModel.cpp  MyMainWin.cpp  README.md  main.cpp
2024-Feb-RewritePrep/Chapter1/: CMakeLists.txt  Connector.cpp  Connector.h  Person.cpp  Person.h  README.md  Reciever.cpp  Reciever.h  Sender.cpp  Sender.h  SmartPointer.h  main.cpp
2024-Feb-RewritePrep/Chapter1/SingletonLogger/: SingletonLogger.cpp  SingletonLogger.h
2024-Feb-RewritePrep/Chapter1/files/: log.txt
2024-Feb-RewritePrep/Chapter1/polymorphism/: Circle.h  Shape.h  ShapePureVirtual.h  Square.h
2024-Feb-RewritePrep/Chapter4-Regex-and-validation/: CMakeLists.txt  main.cpp
2024-Feb-RewritePrep/Chapter5/5.3-XML-generateXML/: CMakeLists.txt  README.md  main.cpp
2024-Feb-RewritePrep/Chapter5/5.4-ProcessingXml/: CMakeLists.txt  main.cpp
2024-Feb-RewritePrep/Chapter5/5.7Loop-n-readXML/: CMakeLists.txt  main.cpp
2024-Feb-RewritePrep/Chapter5/5.8-Loop-n- write-XML/: CMakeLists.txt  main.cpp
2024-Feb-RewritePrep/Chapter5/5.9-Search-XML/: CMakeLists.txt  main.cpp
2024-Feb-RewritePrep/Chapter6/6.1-FactoryMethod-Creational/: CMakeLists.txt  main.cpp
2024-Feb-RewritePrep/Chapter6/6.2-AbstarctFactory-Creational/: CMakeLists.txt  main.cpp
2024-Feb-RewritePrep/Chapter6/6.2.1-Factory-of-Factories/: CMakeLists.txt  main.cpp
2024-Feb-RewritePrep/Chapter6/6.3-Singleton-Creational/: CMakeLists.txt  main.cpp
2024-Feb-RewritePrep/Chapter6/6.4-Memento-Behaviora/: CMakeLists.txt  main.cpp
2024-Feb-RewritePrep/Chapter6/6.5-Strategy-Behaviora/: CMakeLists.txt  main.cpp
2024-Feb-RewritePrep/Chapter6/6.6-AdapterWrapper-structural/: CMakeLists.txt  main.cpp
2024-Feb-RewritePrep/Chapter6/6.7-Facade-Structural/: CMakeLists.txt  main.cpp
2024-Feb-RewritePrep/Chapter7/7.1ThreadingBasics/: CMakeLists.txt  main.cpp
2024-Feb-RewritePrep/Chapter7/7.2QThread/: CMakeLists.txt  MyThread.cpp  MyThread.h  main.cpp
2024-Feb-RewritePrep/Chapter7/7.3QThreadPool/: CMakeLists.txt  MyTask.cpp  MyTask.h  main.cpp
2024-Feb-RewritePrep/Chapter7/7.4ThreadSafety-QMutex/: CMakeLists.txt  WorkerThread.cpp  WorkerThread.h  main.cpp
2024-Feb-RewritePrep/Chapter7/7.5QThread-Communicating-Between-Threads/: CMakeLists.txt  CommunicatingThread.cpp  CommunicatingThread.h  main.cpp
2024-Feb-RewritePrep/Chapter7/7.8-QThread-Multithreaded-Strategy/: CMakeLists.txt  LoadBalancingThread.cpp  LoadBalancingThread.h  main.cpp
2024-Feb-RewritePrep/Chapter7/7.9-QProcess/: CMakeLists.txt  main.cpp
2024-Feb-RewritePrep/Chapter8/: CMakeLists.txt
2024-Feb-RewritePrep/Chapter8/QTcp/QTcpServer/: .gitignore  CMakeLists.txt  main.cpp
2024-Feb-RewritePrep/Chapter8/QTcpServer/: .gitignore
2024-Feb-RewritePrep/Chapter8/QTcpSocket/: main.cpp
2024-Feb-RewritePrep/Chapter8/QUdpClient/: .gitignore
2024-Feb-RewritePrep/Chapter8/QUdpServer/: CMakeLists.txt
2024-Feb-RewritePrep/SignalsAndSlots/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
Lesson_Reference/: ## COS3711 - Lessons.md  Design Patterns.md  Other References.md  QT6 - Signal and Slots.md  Web References from Lessons.md  xml.md
StudentManagerSolution/: Advisor.cpp  Advisor.h  CMakeLists.txt  Degree.cpp  Degree.h  LogReceiverWidget.cpp  LogReceiverWidget.h  Module.cpp  Module.h  Person.cpp  Person.h  Propositional Logic Rules.md  README.md  SolutionObjectType.h  Student.cpp  Student.h  StudentAdvisor.cpp  StudentAdvisor.h  main.cpp
StudentManagerSolution/dbManager/: DatabaseManager.cpp  DatabaseManager.h
StudentManagerSolution/xml/: Advisor.xml  Degree.xml  Module.xml  Student.xml  StudentAdvisor.xml  module.xml
TakeNote/: CMakeLists.txt  main.cpp
TakeNote/FactoryAbstractPattern/: AllCapsMode.cpp  AllCapsMode.h  AllCapsModeFactory.cpp  AllCapsModeFactory.h  NormalMode.cpp  NormalMode.h  NormalModeFactory.cpp  NormalModeFactory.h  README.md  TextModeFactory.cpp  TextModeFactory.h  TextOutputMode.cpp  TextOutputMode.h
TakeNote/FactorymethodPattern/: ChecklistNoteFactory.cpp  ChecklistNoteFactory.h  Note.cpp  Note.h  NoteFactory.cpp  NoteFactory.h  NoteManager.cpp  NoteManager.h  README.md  TextNoteFactory.cpp  TextNoteFactory.h
TakeNote/Singleton/: Logger.cpp  Logger.h  README.md
c++_fundamentals/: C++Fundamentals.md  oop_in_c++.md
c++_fundamentals/funfunfundamental/: CMakeLists.txt
my 2023 assignments/ass2/cos3711-ass2-q1/: README.md  main.cpp
my 2023 assignments/ass2/cos3711-ass2-q2q3/: CMakeLists.txt  ConfectReadingMatFactory.h  Confectionary.h  MyMainWindow.h  MyStockDialog.cpp  MyStockDialog.h  MyStockFactory.h  README.md  ReadingMaterial.h
my 2023 assignments/ass3/ass3_gui_application/: AddMyItemDialog.h  MyItemListDialog.h  MyStoreApp.h  MyTransaction.cpp  MyTransaction.h  MyTransactionFormDialog.h  MyTransactions.xml
my 2023 assignments/ass3/ass3_udp_receiver_application/: MainWindow.cpp  MainWindow.h
my 2023 assignments/asss1/q1/: CMakeLists.txt  MyMainWin.cpp  Staffmember.cpp
my 2023 assignments/asss1/q2/: CMakeLists.txt  MyAppTypeWrapper.h  MyMainWin.h  MyStaffMemberModel.h  MyStaffmember.cpp  README.md  main.cpp
my 2023 assignments/asss1/q3/: CMakeLists.txt  MyAlbumModel.h  MyMainWin.h
past_papers/: JanFeb 2022 Paper and answers.md
(+15 files in other folders)
